lab1/Test/L1-A-7-47.output
Error Type A at Line 8
Error Type A at Line 27
Error Type A at Line 30
Error Type A at Line 37
