lab1/Test/L1-A-7-47.cmm
float ;
int P6a , eKlxlyR_hQErh 

;
int xAbaCe3AQBH4clFG ( ) {
  struct {
    struct {
      struct Lj7gohm ${
        struct {
          struct O7OKjpOPK mUHhlQYheBYnPxHx ;
          int HdPH5v ;
        }OEGUqyoyBLjBFk ;
      }V ;
    }AdLk6 ;
    struct tAFFlYlCkIOJ pOuG2_nM8Xo6XZBbrQ ;
    int gbsli6fu , Sh9jsH0oYao9_3nxm = jk_Sg3Ss4WT 
      || _wTFjjzSM5zDT != l7W7PSFkv6 - yqSrIBhOJcUEJVfn 
      / t78qPOrzdKy [ s878 = JXTfK0 && hLV42fRU + YROJG1YlZhN_ 
      * obG6eHNGFZNKwIYXB8 ( ufI5oB4n0Acsq4pO7WLA , T6_G_ZrdTIw9TlE 
      = EKdCd && T5oZhfGnlXBsdR22N < - _ ( DEd5cZ7fXkSR 
      == ( bH40JDbAi0XvCAIr = tcXQz = F5pB2 && iDRIu >= 
      ZXR2sEzQ [ H0B__C > XD ] ) . kAzxsvGdhhlSW3Bjc0 * 
      HvhqotzRSp / ! 339600737 ) . lf_nqe31 . zzMz9Yb4zih 
      . loRBd2 - ZcTZaVEMV55xU_ ( ) ) <= - ! 777143596.1277684865 
      ] ;
  }wY6eGpgOeRW9sAPuo_ [ 1219267846 ] ;
}@
int ;
int nud5_3B4lzjkf4Ea ( int P7LMZZVkdv7IPSZucdrv , 
  int oW9tGWFfsTuas8X ) #{
{
  }}
int IZfknBx ( ) {
  if ( Z6w )   if ( x9 )   PT1NOhlB ;
else   pRHVBop8J8NzfO ;

'else   if ( HsSKkKeAyYMhTHHd )   while ( RLvngAdjAs 
    )   return zyRK ;



  if ( Z )   zBE3 ;

}
